force-app/main/default/objects/vlocity_ps__ServiceProviderServiceProduct__c/vlocity_ps__ServiceProviderServiceProduct__c.object-meta.xml
<CustomObject>
    <label>Service &amp; Product</label>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Services &amp; Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>