force-app/main/default/objects/vlocity_ps__ServiceProviderServiceProduct__c/fields/vlocity_ps__ContractId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ContractId__c</fullName>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Services &amp; Products</relationshipLabel>
    <relationshipName>ServicesProducts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>