force-app/main/default/objects/vlocity_ps__ServiceProviderServiceProduct__c/fields/vlocity_ps__IsActive__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__IsActive__c</fullName>
    <formula>vlocity_ps__ProductId__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>