force-app/main/default/objects/vlocity_ps__ServiceProviderServiceProduct__c/fields/vlocity_ps__Price__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Price__c</fullName>
    <label>Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>