force-app/main/default/objects/vlocity_ps__ServiceProviderServiceProduct__c/fields/vlocity_ps__ProductCode__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ProductCode__c</fullName>
    <formula>vlocity_ps__ProductId__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>