force-app/main/default/objects/vlocity_ps__ServiceProviderServiceProduct__c/fields/vlocity_ps__ProductFamily__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ProductFamily__c</fullName>
    <formula>TEXT(vlocity_ps__ProductId__r.Family)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Family</label>
    <type>Text</type>
</CustomField>