force-app/main/default/objects/vlocity_ps__ServiceProviderServiceProduct__c/fields/vlocity_ps__ProductId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Services &amp; Products</relationshipLabel>
    <relationshipName>SPServicesProducts</relationshipName>
    <type>Lookup</type>
</CustomField>